Fix dark mode in wz-menu

--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -42,7 +42,7 @@ wz-menu {
 
 .wz-menu-left-side{
     width: 200px;
-    background: #fafbfd;
+    background: #f5f7fa;
     padding: 16px;
     border-right: 1px solid #d3dae6;
 }
@@ -64,17 +64,17 @@ wz-menu {
 }
 
 .wz-menu-sections {
-    margin: -16px;
+    margin: -16px -16px 0px -16px;
     padding: 16px 0;
     position: relative;
     min-height: 300px;
+    background: #fafbfd;
 }
 
 .wz-menu-selectors {
     margin-left: -16px;
     margin-right: -16px;
     padding: 16px;
-    background: #f5f7fa;
     border-top: 1px solid #d3dae6;
     margin-bottom: -16px;
 }
